# Databases-Lab-HSE

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Types/Actual/: Assignment.hpp  Mark.hpp  Student.hpp
src/Types/Meta/: Constants.hpp  Record.hpp  Uuid.cpp  Uuid.hpp
src/dbms/: ApplicationManager.cpp  ApplicationManager.hpp  AssignmentManager.cpp  AssignmentManager.hpp  Container.cpp  Container.hpp  EntityManager.cpp  EntityManager.hpp  FileStructure.hpp  StudentManager.cpp  StudentManager.hpp
